# postured

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr-validation.yml  release-appimage.yml
ci/: build-appimage.sh
flatpak/: io.github.vadi2.postured.metainfo.xml  io.github.vadi2.postured.yml
gnome-extension/postured-overlay@vadimperetok.in/: extension.js  metadata.json
layer-shell-helper/: CMakeLists.txt  main.cpp  overlaywindow.cpp  overlaywindow.h
postured/: __init__.py  __main__.py  app.py  calibration.py  dbus_service.py  gnome_overlay.py  layer_shell_overlay.py  layer_shell_worker.py  led_blinker.py  overlay.py  pose_detector.py  screen_lock.py  settings.py  tray.py
postured/resources/: postured.desktop
resources/: postured.desktop
snap/: snapcraft.yaml
tests/: conftest.py  test_app_startup.py  test_calibration.py  test_dbus_status.py  test_monitor_detection.py  test_overlay.py  test_pose_smoothing.py  test_posture_algorithm.py  test_settings.py
